<resources>
    <string name="app_name">Flasco</string>
    <string name="a11y_event_item_image">Um evento</string>
    <string name="needs_prefix">Valor</string>
    <string name="menu_item_share_event">Compartilhar</string>
    <string name="event_detail_image_content_description">Desc</string>
    <string name="menu_item_back_event">Voltar</string>
    <string name="checkin_btn">Realizar CheckIn</string>
    <string name="dialog_checkin_btn">CHECKIN</string>
    <string name="dialog_email_hint">Email</string>
    <string name="dialog_name_hint">Nome</string>
    <string name="dialog_checkin_title">Preencha seu nome e email</string>
    <string name="dialog_checkin_success">Sucesso</string>
    <string name="dialog_checkin_error">Houve um erro.</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">221623114699507</string>

    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
</resources>