<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="requestResponse"
            type="Boolean" />

        <variable
            name="successful"
            type="Boolean" />
        
        <variable
            name="viewModel"
            type="br.com.diogomoreno.events.presentation.event.ui.dialog.CheckInViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.showContent ? View.GONE : View.VISIBLE }">

            <LinearLayout
                android:id="@+id/llFieldsCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{viewModel.showContent ? View.GONE : View.VISIBLE }">

                <TextView
                    android:id="@+id/tvCheckInTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/dialog_checkin_title"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/dialog_name_hint"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/tieEmail"
                        android:padding="12dp"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/dialog_email_hint"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheckInFragment"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dialog_checkin_btn"
                android:textColor="@color/white"
                android:visibility="@{viewModel.showProgress ? View.GONE : View.VISIBLE }"
                app:cornerRadius="24dp" />

            <ProgressBar
                android:id="@+id/progressLoaderCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="36dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="@{viewModel.showProgress ? View.VISIBLE : View.GONE }"
                tools:visibility="gone" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showSuccess ? View.VISIBLE : View.GONE }"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/lottieFireworks"
                android:layout_width="128dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@drawable/ic_check_success"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSuccessful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/dialog_checkin_success"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottieFireworks" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showError ? View.VISIBLE : View.GONE }"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/lottieError"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                app:srcCompat="@drawable/ic_check_fail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/dialog_checkin_error"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottieError" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>